# labs

./: 5b.cpp  CMakeLists.txt  README  times_tables.js  vector_test.cpp
1brc/: .gitignore  MACHINE  README  README.bak  README.md  WORKNOTES  WORKNOTES.md  expected.txt
1brc/onebrc/: .gitignore  Cargo.toml  hallis.txt  wc_avx2.c
1brc/onebrc/benches/: get_long.rs  next_newline.rs
1brc/onebrc/src/: main.rs
R/: .Rhistory  foobar1.csv  kernel_density_estimate.r  scatterplor.r  time_series.csv  time_series.r
ac_roster/: roster.py  roster.txt  scraping.py
ascii-mentions/: 638?cb=20100416144840  mentions.py  wget-log
cpp/dynlib/: main  main.cpp
cpp/indexof/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  cpp.asm  cpp_c_str  cpp_string  indexof  main.cpp  main_c_str.cpp  main_py.py  main_py3_bytes.py  main_py3_str.py  main_string.cpp  main_string_view.cpp  shuffled_words.txt
datafusion-performance-characteristics/: README.md
datafusion-performance-characteristics/infra/: README.md  package-lock.json  package.json
graphql/: README
lex/: README  example1
love-and-fury-effect/: index.html
map-projection-errors/: README  index.html  index.js  package-lock.json  package.json
nagios_lab/: README  hosts  nagios-server.yaml
nagios_lab/filter_plugins/: plugins.py
prolog/: README  db.pl  episodes.pl  several.pl  test  test.pl
python/list_index/: c  (+28 more)
raw_term/: README  main.c
regex/: regex.py
temperature-range-heatmap/: compute.py  download-data.py
visualize-attention/: DISCUSSION_WITH_CHATGPT.md  README.md  requirements.txt
(+34 files in other folders)
