[package]
name = "onebrc"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = 1
embed-bitcode = true
lto = "fat"        # or true / "fat"
panic = "abort"
debug-assertions = false
overflow-checks = false
codegen-units = 1

[[bench]]
name = "next_newline"
harness = false

[[bench]]
name = "get_long"
harness = false

[dependencies]
memmap2 = "0.9.9"
memmap = "0.7.0"
libc = "0.2.178"
memchr = "2.7.6"
rayon = "1.11.0"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
criterion = "0.8.1"
